# HighFly

./: README.md
HighFly/src/: index.html  main.js  styles.css
HighFly/src-tauri/: Cargo.toml  tauri.conf.json
HighFly/src-tauri/icons/: icon.icns
HighFly/src-tauri/src/: lib.rs  main.rs  saved_data.rs
WebVideo/: index.html  main.js
arduino/: ble.py  data copy.txt  data.txt  plot.py  stuff.py
arduino/accelerometer/: accelerometer.ino
ui/: index.html
web/: Privacy Policy.html  index.html  sitemap.xml
web/Video/: index.css  index.html
web/WebVideo/: index.html
